# stm32-FreeRTOS

./: CMakeLists.txt  README.md
src/: blinky.c  main.c
